XX:MaxPermSize nolonger req'd for jdk8